init_temp/isitio-apigateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: app-ingress-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway  # 기본 Istio Ingress Gateway 선택
  servers:
  - hosts:
    - '*'
    port:
      name: http
      number: 80
      protocol: HTTP
#    tls:
#      httpsRedirect: true
#  - hosts:
#    - '*'
#    port:
#      name: https
#      number: 443
#      protocol: HTTPS
#    tls:
#      credentialName: secret-istio-ssl
#      mode: SIMPLE
